[package]
name = "gtfs_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.1.0"
chrono = "0.4"
gtfs-structures = "0.29.0"
mongodb = { version = "2.2.1", default-features = false, features = ["sync"] }
#rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
structmap = { git = "https://github.com/ex0dus-0x/structmap", branch = "master" }
structmap-derive = { git = "https://github.com/ex0dus-0x/structmap", branch = "master" }
typed-builder = "0.9.0"
rfc6570-level-2 = "1.2.0"